added an icon, tried fixing the toggler

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>finalv</title>
+    <meta name="keywords" content="web design, leadership, aws cloud engineer, debator, Gabriel, Mwashighadi, Mtui, software engineer, web developer, database engineer, web designer, architect, AWS cloud practitioner, DevOps, cloud engineer, MongoDB engineer, full stack developer">
+    <meta name="description" content="Hello There | Gabriel Mwashighadi Mtui | Software engineer | Cloud Developer | AWS cloud engineer | Debator">
+    <title>Gabriel M. Mtui</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -12,11 +14,20 @@
     <link rel="stylesheet" href="assets/css/Banner-Heading-Image-images.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="icon" href="/assets/img/download.webp" type="image/x-icon">
+    <style>
+        .navbar-nav {
+            margin-left: auto !important;
+        }
+    </style>
 </head>
-
 <body style="background: #cccccc;overflow-x: hidden;">
     <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-light" style="height: 80px;color: #212529;background: #212529;width: 100%;opacity: 0.77;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: rgb(238,242,245);font-weight: bold;">&nbsp;GABU</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#" style="color: rgb(238,242,245);font-weight: bold;">&nbsp;GABU</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol-1" aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation" style="border-color: rgb(238,242,245);">
+                <span class="navbar-toggler-icon" style="color: rgb(238,242,245);"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(70,99,128);padding: 3rem;">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="index.html"><i class="fa fa-home" style="font-weight: bold;"></i>&nbsp;Home</a></li>
