seo on meta tags and removed the right margin on smaller screens

--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html >
+<html lang="en">
 <head>
-    <meta charset="utf-8" lang="en">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta name="keywords" 
-          content="web design, leadership, aws cloud engineer, 
+        content="web design, leadership, aws cloud engineer, 
                     debator, Gabriel, Mwashighadi, Mtui, software engineer, web developer, 
                     database engineer, web designer, architect, AWS cloud practitioner, DevOps, 
                     cloud engineer, MongoDB engineer, full stack developer">
     <meta name="description" 
-          content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer 
-                  | AWS Cloud Engineer | Debator">
+        content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer 
+                | AWS Cloud Engineer | Debator">
+
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -18,7 +19,12 @@
     <link rel="stylesheet" href="assets/css/Banner-Heading-Image-images.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="icon" href="/assets/img/download.webp" type="image/x-icon">
-    <title>Gabriel M. Mtui</title>
+
+    <link rel="conanical" href="https://gabrielmtui.com">
+    <meta property="og:title" content="Gabriel M. Mtui | Software Engineer | Cloud Developer">
+    <meta property="og:description" content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer | AWS Cloud Engineer | Debator">
+    <meta property="og:url" content="https://gabrielmtui.com">
+    <title>Gabriel M. Mtui | Software Engineer | Cloud Developer</title>
 </head>
 
 <body >
@@ -78,8 +84,8 @@
         <section class="div-text-center d-flex">
             <h1>portfolio</h1>
         </section>
-        <div class="row" >
-            <div class="col-md-4" style="padding: 20px;">
+        <div class="row container-fluid ps-0 ps-0" >
+            <div class="col-md-4">
                 <div class="d-flex align-items-center card" style="text-align: center;">
                     <img class="card-image" src="assets/img/621d206f92a9c10001653df8.jpg">
                     <h4 class="card-title">database and scheduling</h4>
@@ -111,21 +117,21 @@
                 <div class="cert-card" >
                     <img src="assets/img/badge-aws.png">
                     <a class="verify-badge" 
-                       href="https://www.credly.com/badges/da45259c-656a-420e-b8b5-f8dd8b65846a/public_url" 
-                       target="_blank">Verify here</a>
+                    href="https://www.credly.com/badges/da45259c-656a-420e-b8b5-f8dd8b65846a/public_url" 
+                    target="_blank">Verify here</a>
                 </div>
             </div>
             <div class="col-md-4">
                 <div class="cert-card">
                     <img src="assets/img/wed-dev-ibm-badge.png">
                     <a class="verify-badge" 
-                       href="https://www.credly.com/badges/7208f951-ef30-4f7e-a506-2b43ff3c22ed/public_url" 
-                       target="_blank">Verify here</a>
-               </div>
+                    href="https://www.credly.com/badges/7208f951-ef30-4f7e-a506-2b43ff3c22ed/public_url" 
+                    target="_blank">Verify here</a>
+            </div>
             </div>
             <div class="col-md-4">
                 <div class="cert-card">
-                    <img src="assets/img/re-start-grad-badge.png" style="/*height: 20vh;*/">
+                    <img src="assets/img/re-start-grad-badge.png" >
                     <a class="verify-badge" 
                         href="https://www.credly.com/badges/4b434e11-64b2-41ae-b311-8216ab56f4b4/public_url" 
                         target="_blank">Verify here</a>
@@ -163,5 +169,4 @@
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/portfolio.js"></script>
 </body>
-
 </html>
