added something I dont know

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <meta name="description" 
         content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer 
                 | AWS Cloud Engineer | Debator">
-
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
@@ -23,13 +22,14 @@
     <link rel="conanical" href="https://gabrielmtui.com">
     <meta property="og:title" content="Gabriel M. Mtui | Software Engineer | Cloud Developer">
     <meta property="og:description" content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer | AWS Cloud Engineer | Debator">
+    <meta property="og:image" content="https://gabrielmtui.com/assets/img/621d206f92a9c10001653df8.jpg">
     <meta property="og:url" content="https://gabrielmtui.com">
     <title>Gabriel M. Mtui | Software Engineer | Cloud Developer</title>
 </head>
 
 <body >
     <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-dark" >
-        <div class="container-fluid">
+        <div class="container-fluid ps-0 ps-0">
             <a class="navbar-brand" href="portfolio.html" >&nbsp;GABU</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol-1" 
                     aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation" >
@@ -80,12 +80,12 @@
             <div class="col-md-6 about-image"></div>
         </div>
     </div>
-    <div class="container-fluid ps-0 pe-0">
+    <div class="container-fluid m-0 p-0">
         <section class="div-text-center d-flex">
             <h1>portfolio</h1>
         </section>
-        <div class="row container-fluid ps-0 ps-0" >
-            <div class="col-md-4">
+        <div class="row g-0" >
+            <div class="col-md-4" style="padding: 20px;">
                 <div class="d-flex align-items-center card" style="text-align: center;">
                     <img class="card-image" src="assets/img/621d206f92a9c10001653df8.jpg">
                     <h4 class="card-title">database and scheduling</h4>
@@ -131,7 +131,7 @@
             </div>
             <div class="col-md-4">
                 <div class="cert-card">
-                    <img src="assets/img/re-start-grad-badge.png" >
+                    <img src="assets/img/re-start-grad-badge.png" style="/*height: 20vh;*/">
                     <a class="verify-badge" 
                         href="https://www.credly.com/badges/4b434e11-64b2-41ae-b311-8216ab56f4b4/public_url" 
                         target="_blank">Verify here</a>
