--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="col-md-6 about-image"></div>
         </div>
     </div>
-    <div class="container-fluid m-0 p-0">
+    <div class="container-fluid m-0 p-0 ps-0 pe-0">
         <section class="div-text-center d-flex">
             <h1>portfolio</h1>
         </section>
