--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
             </div>
             <div class="col-md-4">
                 <div class="cert-card">
-                    <img src="assets/img/re-start-grad-badge.png" style="/*height: 20vh;*/">
+                    <img src="assets/img/re-start-grad-badge.png">
                     <a class="verify-badge" 
                         href="https://www.credly.com/badges/4b434e11-64b2-41ae-b311-8216ab56f4b4/public_url" 
                         target="_blank">Verify here</a>
@@ -144,7 +144,8 @@
             <div class="row card-footer">
                 <div class="col-md-6 col-lg-8 mx-auto">
                     <ul class="list-inline text-center" style="margin: 16px 0px 16px;">
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i>
+                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
                             <i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
                         </li>
                         <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
