done lots of changes today

--- a/about.html
+++ b/about.html
@@ -4,25 +4,50 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>finalv</title>
+    <meta name="keywords" 
+        content="web design, leadership, aws cloud engineer, 
+                    debator, Gabriel, Mwashighadi, Mtui, software engineer, web developer, 
+                    database engineer, web designer, architect, AWS cloud practitioner, DevOps, 
+                    cloud engineer, MongoDB engineer, full stack developer">
+    <meta name="description" 
+        content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer 
+                | AWS Cloud Engineer | Debator">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica&amp;display=swap">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/animate.min.css">
     <link rel="stylesheet" href="assets/css/Banner-Heading-Image-images.css">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/untitled.css">
+    <link rel="icon" href="/assets/img/download.webp" type="image/x-icon">
+
+    <link rel="conanical" href="https://gabrielmtui.com">
+    <meta property="og:title" content="Gabriel M. Mtui | Software Engineer | Cloud Developer">
+    <meta property="og:description" content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer | AWS Cloud Engineer | Debator">
+    <meta property="og:image" content="https://gabrielmtui.com/assets/img/621d206f92a9c10001653df8.jpg">
+    <meta property="og:url" content="https://gabrielmtui.com">
+    <title>Gabriel M. Mtui | Software Engineer | Cloud Developer</title>
 </head>
 
-<body style="--bs-body-bg: #cdcaca;background: #212529;">
-    <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-light" style="height: 80px;color: #212529;background: #212529;width: 100%;opacity: 0.77;">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="color: rgb(238,242,245);font-weight: bold;">&nbsp;GABU</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(70,99,128);padding: 3rem;">
+<body>
+    <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-dark" >
+        <div class="container-fluid ps-0 ps-0">
+            <a class="navbar-brand" href="portfolio.html" >&nbsp;GABU</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol-1" 
+                    aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation" >
+                <span class="navbar-toggler-icon" ></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navcol-1" >
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link active" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="index.html"><i class="fa fa-home" style="font-weight: bold;"></i>&nbsp;Home</a></li>
-                    <li class="nav-item"><a class="nav-link active" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="portfolio.html"><i class="fa fa-star-o" style="font-weight: bold;"></i>&nbsp;Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link active" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="explore.html"><i class="fa fa-wpexplorer" style="font-weight: bold;font-size: 18px;"></i>&nbsp;Explore</a></li>
-                    <li class="nav-item"><a class="nav-link active" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="about.html"><i class="fa fa-user-circle-o" style="font-weight: bold;"></i>&nbsp;About</a></li>
-                    <li class="nav-item"><a class="nav-link" style="color: #ffffff;font-weight: bold;padding: 10px;margin: 5px;" href="contact.html"><i class="fa fa-sign-in"></i>&nbsp;contact</a></li>
+                    <li class="nav-item"><a class="nav-link active" 
+                        href="index.html"><i class="fa fa-home" ></i>&nbsp;Home</a></li>
+                    <li class="nav-item"><a class="nav-link active"  
+                        href="portfolio.html"><i class="fa fa-star-o" ></i>&nbsp;Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link active"  
+                        href="portfolio.html"><i class="fa fa-wpexplorer" ></i>&nbsp;Explore</a></li>
+                    <li class="nav-item"><a class="nav-link active"  
+                        href="about.html"><i class="fa fa-user-circle-o" ></i>&nbsp;About</a></li>
+                    <li class="nav-item"><a class="nav-link active"  
+                        href="contact.html"><i class="fa fa-sign-in"></i>&nbsp;Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -37,21 +62,38 @@
     </div>
     <div class="container-fluid" style="background: #212529;">
         <div class="row subsections">
-            <div class="col-md-6 flex-column subsection tech ms-0" style="margin: 0px;padding: 0px;">
-                <h1 style="font-size: 40px;font-weight: bold;">tech</h1>
-                <p style="font-weight: bold;font-size: 20px;text-align: center;line-height: 1.8rem;">I'm aspiring to be a geek and promote tech for the good of our community.<br>With a passion in web development, ML and AI, I aim leveraging on tech to solve Africa's unique problems and promote Africa's businesses and start-ups.&nbsp;I have specialized in Cloud Engineering, Web Design and Architectural, Programming and DevOps.</p>
+            <div class="col-md-6 subsection tech ms-0">
+                <h1 >tech</h1>
+                <p>
+                    I aspire to be a tech geek, leveraging technology to solve Africa’s unique challenges 
+                    and empower businesses and startups. With a passion for web development, ML, and AI, I
+                    specialize in Cloud Engineering, Web Design, Programming, and DevOps to drive positive change.
+                </p>
             </div>
-            <div class="col-md-6 flex-column subsection leadership">
-                <h1 style="font-size: 40px;font-weight: bold;">leadership</h1>
-                <p style="line-height: 1.8rem;font-weight: bold;font-size: 20px;">Gabriel has been in spaces where he has sharpened and harnessed his leadership skills. Having worked closely with AYLF (Africa Youth Leadership Forum ) , Gabriel has helped transform young people into virtous leaders who will be the light and salt to the world. He has also been involved with the YSK (Young Science Kenya) where he reviewed and judged high schooler's projects.&nbsp;</p>
+            <div class="col-md-6 subsection leadership">
+                <h1 >leadership</h1>
+                <p>
+                    Gabriel has honed his leadership skills in impactful spaces. Through his work with AYLF 
+                    (Africa Youth Leadership Forum), he has transformed young people into virtuous leaders 
+                    who shine as light and salt in the world. With YSK (Young Scientists Kenya), he has 
+                    reviewed and judged high school projects, fostering innovation among young minds.
+                </p>
             </div>
-            <div class="col-md-6 flex-column subsection life">
-                <h1 style="font-weight: bold;font-size: 40px;">life</h1>
-                <p style="font-weight: bold;font-size: 20px;">Its Good to be young<br>But Though Lest not forget and not let young souls be smothered out before they do quaint deeds and fully flaunt their pride<br>To live as though its your last<br>To do good, and practice virtue, to serve and to want no more<br>This, I think, Is to live</p>
+            <div class="col-md-6  subsection life">
+                <h1 >life</h1>
+                <p >
+                    It’s good to be young.But let us not let young souls fade before they accomplish great deeds.
+                    To live as though it’s your last day, to do good, practice virtue, and serve selflessly—this, 
+                    I believe, is truly living.
+                </p>
             </div>
-            <div class="col-md-6 flex-column subsection debator">
-                <h1 style="font-size: 40px;font-weight: bold;">why Gabriel Debates</h1>
-                <p style="font-size: 20px;font-weight: bold;">Those who speak with clarity and conviction have the power to change the world and guide those who cannot see. Transformation starts with the ability to articulate one’s challenges clearly. Mastering the art of expression—speaking with confidence and precision—is key.This is the essence of debate: voicing your truth, persuading others, and engaging in the exchange of ideas. Debate is not just about defending a perspective, but also about listening, understanding opposing views, and seeing the world through others' eyes</p>
+            <div class="col-md-6  subsection debator">
+                <h1>why Gabriel Debates</h1>
+                <p>
+                    Clarity and conviction have the power to change man. Transformation begins when we articulate 
+                    challenges and solutions effectively. Debate is more than defending ideas; it’s about 
+                    understanding others, embracing diverse perspectives, and driving meaningful dialogue.
+                </p>
             </div>
         </div>
     </div>
@@ -60,12 +102,24 @@
             <div class="row card-footer">
                 <div class="col-md-6 col-lg-8 mx-auto">
                     <ul class="list-inline text-center" style="margin: 16px 0px 16px;">
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a></li>
-                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg"><i class="fa fa-circle fa-stack-2x"></i><i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a></li>
+                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-facebook fa-stack-1x fa-inverse"></i></span></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-twitter fa-stack-1x fa-inverse"></i></span></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-instagram fa-stack-1x fa-inverse"></i></span></a>
+                        </li>
+                        <li class="list-inline-item"><a href="#"><span class="fa-stack fa-lg">
+                            <i class="fa fa-circle fa-stack-2x"></i>
+                            <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i></span></a>
+                        </li>
                     </ul>
-                    <p class="text-center copyright" style="color: #cdcaca;">Copyright © Gabriel M 2024 | ShopNet Inc</p>
+                    <p class="text-center copyright">Copyright © Gabriel M 2024 | ShopNet Inc</p>
                 </div>
             </div>
         </div>
