--- a/portfolio.html
+++ b/portfolio.html
@@ -22,12 +22,12 @@
 
     <link rel="conanical" href="https://gabrielmtui.com">
     <meta property="og:title" content="Gabriel M. Mtui | Software Engineer | Cloud Developer">
-    <meta property="og:description" 
-            content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer | AWS Cloud Engineer | Debator">
+    <meta property="og:description" content="Gabriel Mwashighadi Mtui | Software Engineer | Cloud Developer | AWS Cloud Engineer | Debator">
     <meta property="og:image" content="https://gabrielmtui.com/assets/img/621d206f92a9c10001653df8.jpg">
     <meta property="og:url" content="https://gabrielmtui.com">
     <title>Gabriel M. Mtui | Software Engineer | Cloud Developer</title>
 </head>
+
 
 <body>
     <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-dark" >
@@ -44,7 +44,7 @@
                     <li class="nav-item"><a class="nav-link active"  
                         href="portfolio.html"><i class="fa fa-star-o" ></i>&nbsp;Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link active"  
-                        href="explore.html"><i class="fa fa-wpexplorer" ></i>&nbsp;Explore</a></li>
+                        href="portfolio.html"><i class="fa fa-wpexplorer" ></i>&nbsp;Explore</a></li>
                     <li class="nav-item"><a class="nav-link active"  
                         href="about.html"><i class="fa fa-user-circle-o" ></i>&nbsp;About</a></li>
                     <li class="nav-item"><a class="nav-link active"  
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <section class="py-4 py-xl-5 pe-0 me-0">
-        <div class="container ps-0 pe-0">
+        <div class="container ps-0 pe-0" >
             <div class="bg-dark border rounded border-0 border-dark overflow-hidden">
                 <div class="row g-0">
                     <div class="col-md-6">
@@ -93,7 +93,7 @@
         style="background: #070707;">
         <button class="btn btn-primary" style="margin:1rem">download curriculum vitae</button>
     </section>
-    <footer id="footerpad" style="background: #212529;">
+    <footer id="footerpad" style="background: #212529;margin: 0px;margin-top: 0px;">
         <div class="container">
             <div class="row card-footer">
                 <div class="col-md-6 col-lg-8 mx-auto">
