--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <li class="nav-item"><a class="nav-link active"  
                         href="portfolio.html"><i class="fa fa-star-o" ></i>&nbsp;Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link active"  
-                        href="explore.html"><i class="fa fa-wpexplorer" ></i>&nbsp;Explore</a></li>
+                        href="portfolio.html"><i class="fa fa-wpexplorer" ></i>&nbsp;Explore</a></li>
                     <li class="nav-item"><a class="nav-link active"  
                         href="about.html"><i class="fa fa-user-circle-o" ></i>&nbsp;About</a></li>
                     <li class="nav-item"><a class="nav-link active"  
