resized the hero text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body >
     <nav class="navbar navbar-expand-md sticky-top navigation-clean-button navbar-dark" >
         <div class="container-fluid ps-0 ps-0">
-            <a class="navbar-brand" href="portfolio.html" >&nbsp;GABU</a>
+            <a class="navbar-brand" href="portfolio.html" >&nbsp;  GABU</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navcol-1" 
                     aria-controls="navcol-1" aria-expanded="false" aria-label="Toggle navigation" >
                 <span class="navbar-toggler-icon" ></span>
@@ -51,11 +51,11 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid .hero-content" style="text-align: center;">
-        <div class="row align-items-center">
+    <div class="container-fluid " style="text-align: center;">
+        <div class="row align-items-center .hero-content">
             <div class="col d-flex justify-content-center align-items-center">
                 <div class="hero-message">
-                    <h1 style="font-size: 70px;">GABRIEL M.</h1>
+                    <h1 style="/*font-size: 70px;*/">GABRIEL M.</h1>
                     <h1>MWASHIGHADI</h1>
                     <p style="font-size: 20px;">to shake the tree of life itself and bring&nbsp;
                         <br>down fruit unheard of</p>
@@ -69,11 +69,15 @@
     <div class="container-fluid" id="about-section">
         <div class="row">
             <div class="about-text col-md-6 d-flex">
-                <p>HELLO THERE !&nbsp;&nbsp;
-                    <br>software engineer | Web Developer
-                    <br>Database Engineer | Web Designer and Architect<br>
-                    AWS cloud Practitioner | DevOps - Cloud Engineer<br>
-                    MongoDB Engineer | Full Stack Developer&nbsp;<br>Debator | Leader</p>
+                <p>
+                    GABRIEL MWASHIGHADI <br> 
+                    WEB DESIGNER | WEB DEVELOPER | WEB ARCHITECT |
+                    UI/UX DESIGNER | FRONTEND DEVELOPER | BOOTSTRAP STUDIO |
+                    AWS CLOUD PRACTITIONER | DEVOPS | CLOUD ENGINEER
+                    SOFTWARE ENGINEER |
+                    PHP DEVELOPER | DATABASE ENGINEER |
+                    DEBATOR | LEADER
+                </p>
                 <a class="btn btn-primary btn-xl btn-about" role="button" data-bss-hover-animate="pulse" 
                     href="about.html">more about Gabriel</a>
             </div>
@@ -127,7 +131,7 @@
                     <a class="verify-badge" 
                     href="https://www.credly.com/badges/7208f951-ef30-4f7e-a506-2b43ff3c22ed/public_url" 
                     target="_blank">Verify here</a>
-            </div>
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="cert-card">
